--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.scss
@@ -15,4 +15,10 @@
 		border-radius: 5px;
 		padding: 5px;
 	}
+	.min-height-attach{
+		min-height: 36px;
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+	}
 }
