--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
@@ -72,7 +72,7 @@
                       <div *ngFor="let sub of category.subCategory;last as las; first as fir;index as subIndex">
                         <div *ngIf="sub.isSelected">
                           <ul  class="tree" >
-                          <li class="text-color font-weight-500 kt-margin-l-15" [class.last]="las|| (las==fir)">{{sub.subCategoryName | titlecase}}
+                          <li class="text-color font-weight-500 kt-margin-l-15" [class.last]="las">{{sub.subCategoryName | titlecase}}
                         <div class="row justify-content-start kt-margin-l-40">
                           <div *ngFor="let product of sub.products;index as idx" class="col-4">
                                 <span class="position-relative ">
