--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.scss
@@ -29,12 +29,10 @@
     border-left: thin solid #000;
   }
 
-//   ul.tree li:last-child {
-//     border-left: none;
-//   }
-  .last{
-	border-left: none !important;
+  ul.tree li:last-child {
+    border-left: none;
   }
+  
   
 
   ul.tree li:before {
