Completed Bulk Upload Product

--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.scss
@@ -13,10 +13,10 @@
             border-radius: 4px;
             cursor: pointer;
         }
+        
+        .cancelLogo {
+            width: 14px;
+            height: 14px;
+        }
     }
-}
-.primaryHeaderBtn {
-    background:#454d67!important ;
-    color:#bcc2d6!important;
-    min-width:64px;
 }
