Completed Bulk Edit Product

--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
@@ -6,7 +6,7 @@
                 <p class="pt-3"><span class="font-weight-bold kt-pointer" (click)="getProductReport()">Click Here</span>
                     To Download All Excel File</p>
 
-                <a href="" download>Click to download sample file</a>
+                <a *ngIf="!editUpload" href="" download>Click to download sample file</a>
 
                 <!-- <mat-icon aria-hidden="false" color="primary" aria-label="Example save icon">save</mat-icon>
                 <p style="color:blue;display:inline-block;margin-bottom: 10px;" (click)="exportAsXLSX()">Download
@@ -17,7 +17,8 @@
                     <label for="file-upload" class="custom-file-upload font-weight-500">
                         Attach Excel File
                     </label>
-                    <input #file id="file-upload" type="file" accept=".xlsx, .xls, .csv" (change)="getFileDetails($event)" />
+                    <input #file id="file-upload" type="file" accept=".xlsx, .xls, .csv"
+                        (change)="getFileDetails($event)" />
                 </p>
                 <div *ngIf="!files.length">
                     <p>No files are choosen</p>
@@ -25,7 +26,8 @@
                 <div class="pb-3" *ngIf="files.length">
                     <div class="font-weight-normal" *ngFor="let file of files">
                         <span class="pr-2">{{file?.name}}</span>
-                        <img class="cancelLogo kt-pointer" [src]="'assets/media/icons/cancel.png'"  (click)="clearFiles()" />
+                        <img class="cancelLogo kt-pointer" [src]="'assets/media/icons/cancel.png'"
+                            (click)="clearFiles()" />
                     </div>
                 </div>
                 <p>
