--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -99,6 +99,9 @@ body {
 	border: 1px solid #e2e5ec !important;
 	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+.form-control:disabled{
+	cursor: not-allowed !important;
+}
 
 .isError {
 	border: 1px solid red !important;
