--- a/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
@@ -21,7 +21,7 @@
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
 
                         <!-- Name -->
-                        <div class="row kt-padding-t-15">
+                        <div class="row">
                             <div class="col-4 form-label">
                                 <mat-label class="mandatory">Full Name</mat-label>
                             </div>
