--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
@@ -4,7 +4,7 @@
             <div class="col-12">
                 <mat-tab-group [(selectedIndex)]="selected">
                     <mat-tab label="Basic Details" [disabled]="disabled[0]">
-                        <kt-basic-details (basicFormEmit)="basicForm($event)" [details]="customerDetail" [disable]="disabledForm">
+                        <kt-basic-details (basicFormEmit)="basicForm($event)" [details]="customerDetail" [disable]="disabledForm" (apiHit)="customerDetails($event)">
                         </kt-basic-details>
                     </mat-tab>
                     <mat-tab label="KYC Details" [disabled]="disabled[1]">
