--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -1,4 +1,4 @@
-<form action="" [formGroup]="basicForm">
+<form [formGroup]="basicForm">
     <div class="row justify-content-center">
         <div class="col-6">
             <div class="row">
@@ -7,8 +7,8 @@
                 </div>
                 <div class="col-6">
                     <input type="text" class="form-control" placeholder="10234501203203" formControlName="customerUniqueId"
-                        maxlength="8" [class.isError]="controls.customerUniqueId.touched && controls.customerUniqueId.invalid"
-                        (keyup)="getCustomerDetails()">
+                         [class.isError]="controls.customerUniqueId.touched && controls.customerUniqueId.invalid"
+                        (keyup.enter)="getCustomerDetails()">
                     <mat-error *ngIf="controls.customerUniqueId.touched && controls.customerUniqueId.invalid">
                         Field is Required
                     </mat-error>
@@ -36,14 +36,8 @@
                     <label class="text-color kt-padding-l-10">Start Date</label>
                 </div>
                 <div class="col-6">
-                    <input type="text" class="form-control" [matDatepicker]="picker" (click)="picker.open()"
-                        formControlName="startDate"
-                        [class.isError]="controls.startDate.touched && controls.startDate.invalid"
-                        placeholder="4/5/2020" (dateInput)="transform()" readonly>
-                    <mat-datepicker #picker></mat-datepicker>
-                    <mat-error *ngIf="controls.startDate.errors?.required && controls.startDate.touched">
-                        Required field
-                    </mat-error>
+                    <input type="text" class="form-control"  formControlName="startDate" value="{{currentDate |  date:'mediumDate'}}"
+                        placeholder="4/5/2020">
                 </div>
             </div>
         </div>
