--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/kyc-details/kyc-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/kyc-details/kyc-details.component.html
@@ -43,20 +43,15 @@
     </div>
 
     <div class="row">
-        <ng-container formArrayName="address"
-            *ngFor="let addressForm of kycForm.get('address')['controls']; index as i;">
+        <ng-container>
 
-            <div [formGroupName]="i" class="col-6">
+            <div class="col-6">
 
 
                 <div class=" kt-margin-t-20">
                     <div class="row">
                         <div class="col-3 offset-1 p-0">
-                            <label class="  font-weight-500 text-color" *ngIf="i == 1">Residential
-                                or
-                                Official
-                                Address</label>
-                            <label class="  font-weight-500 text-color" *ngIf="i == 0"> Permanent
+                            <label class="  font-weight-500 text-color"> Permanent
                                 Address</label>
                         </div>
                         <div class="col-7">
@@ -64,11 +59,6 @@
                                 placeholder="Enter your text" class="form-control"></textarea>
                         </div>
                     </div>
-                </div>
-
-                <div>
-                    <input *ngIf="i==1" value="residential" formControlName="addressType" type="hidden">
-                    <input *ngIf="i==0" value="permanent" formControlName="addressType" type="hidden">
                 </div>
                 <div>
                     <div class=" kt-margin-t-20">
@@ -140,22 +130,130 @@
                     <div class=" kt-margin-t-20 kt-margin-b-20">
                         <div class="row">
                             <div class="col">
-                                <div class="offset-4 img-container"
-                                    *ngIf="addressForm.controls.addressProof.value.length ==0">
+                                <div class="offset-4 img-container">
                                     <img class="placeholder-image"
                                         src="../../../../../../assets/media/icons/image-placeholder.png"
                                         alt="placeholder">
                                 </div>
 
-                                <div *ngIf="addressForm.controls.addressProof.value.length > 0">
+                                <!-- <div *ngIf="addressForm.controls.addressProof.value.length > 0">
                                     <div class="row">
-                                        <div class="col-6" *ngFor="let img of addressForm.controls.addressProof.value, index as idx">
+                                        <div class="col-6"
+                                            *ngFor="let img of addressForm.controls.addressProof.value, index as idx">
                                             <div class="img-container">
                                                 <img class="fetched-image" [src]="img" alt="">
                                             </div>
                                         </div>
                                     </div>
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+
+
+                <div class=" kt-margin-t-20">
+                    <div class="row">
+                        <div class="col-3 offset-1 p-0">
+                            <label class="  font-weight-500 text-color">Residential
+                                or
+                                Official
+                                Address</label>
+                        </div>
+                        <div class="col-7">
+                            <textarea formControlName="address" type="text" rows="5" aria-label="Residential Address"
+                                placeholder="Enter your text" class="form-control"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class=" kt-margin-t-20">
+                        <div class="row">
+                            <div class="col-3 offset-1 p-0">
+                                <label class="  font-weight-500 text-color">State
+                                </label>
+                            </div>
+                            <div class="col-7">
+                                <input type="text" formControlName="stateId" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class=" kt-margin-t-20">
+                            <div class="row">
+                                <div class="col-3 offset-1 p-0">
+                                    <label class="  font-weight-500 text-color">City
+                                    </label>
                                 </div>
+                                <div class="col-7">
+                                    <input type="text" formControlName="cityId" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+
+                        <div class=" kt-margin-t-20">
+                            <div class="row">
+                                <div class="col-3 offset-1 p-0">
+                                    <label class="  font-weight-500 text-color">Pin Code</label>
+                                </div>
+                                <div class="col-7">
+                                    <input formControlName="pinCode" type="text" aria-label="Pin Code"
+                                        placeholder="000000" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class=" kt-margin-t-20">
+                        <div class="row">
+                            <div class="col-3 offset-1 p-0">
+                                <label class="  font-weight-500 text-color">Address Proof
+                                </label>
+                            </div>
+                            <div class="col-7">
+                                <input type="text" formControlName="addressProofTypeId" class="form-control">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="kt-margin-t-20">
+                        <div class="row">
+                            <div class="col-3 offset-1 p-0">
+                                <label class=" font-weight-500 text-color">Unique Identity
+                                    No.</label>
+                            </div>
+                            <div class="col-7">
+                                <input formControlName="addressProofNumber" type="text"
+                                    placeholder="Unique Identity Number" class="form-control">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class=" kt-margin-t-20 kt-margin-b-20">
+                        <div class="row">
+                            <div class="col">
+                                <div class="offset-4 img-container">
+                                    <img class="placeholder-image"
+                                        src="../../../../../../assets/media/icons/image-placeholder.png"
+                                        alt="placeholder">
+                                </div>
+
+                                <!-- <div *ngIf="addressForm.controls.addressProof.value.length > 0">
+                                    <div class="row">
+                                        <div class="col-6"
+                                            *ngFor="let img of addressForm.controls.addressProof.value, index as idx">
+                                            <div class="img-container">
+                                                <img class="fetched-image" [src]="img" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
