--- a/gold-admin-frontend/src/app/views/pages/emi-management/bulk-upload-report/bulk-upload-report-list/bulk-upload-report-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/bulk-upload-report/bulk-upload-report-list/bulk-upload-report-list.component.html
@@ -65,8 +65,22 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let report">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="downloadFile(report)" class="kt-pointer"> File | &nbsp;</div>
-                            <div (click)="downloadReport(report)" class="kt-pointer"> Report </div>
+                            <!-- <div class="kt-pointer"> File 
+                                <span class="pl-2">
+                                    <img height="12" width="12" [src]="'assets/media/icons/_download.svg'">
+                                </span>
+                            </div> -->
+                            <a class="text-body" [href]="report?.URL"> File
+                                <span class="pl-2">
+                                    <img height="12" width="12" [src]="'assets/media/icons/_download.svg'">
+                                </span>
+                            </a>
+                            <span class="px-2">|</span>
+                            <div (click)="downloadReport(report)" class="kt-pointer"> Report
+                                <span class="pl-2">
+                                    <img height="12" width="12" [src]="'assets/media/icons/_download.svg'">
+                                </span>
+                            </div>
                         </div>
                     </mat-cell>
                 </ng-container>
