--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col-6">
                     <input type="text" class="form-control" placeholder="9845678991" formControlName="mobileNumber"
-                        numbersOnly maxlength="10" >
+                        numbersOnly maxlength="10" readonly >
                 </div>
             </div>
             <div class="row kt-margin-t-15">
@@ -28,7 +28,7 @@
                     <label class="text-color kt-padding-l-10">PAN Number</label>
                 </div>
                 <div class="col-6">
-                    <input type="text" class="form-control" placeholder="qwert1234q" formControlName="panCardNumber">
+                    <input type="text" class="form-control" placeholder="qwert1234q" formControlName="panCardNumber" readonly>
                 </div>
             </div>
             <div class="row kt-margin-t-15">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-6">
                     <input type="text" class="form-control"  formControlName="startDate" value="{{currentDate |  date:'mediumDate'}}"
-                        placeholder="4/5/2020">
+                        placeholder="4/5/2020" readonly>
                 </div>
             </div>
         </div>
