--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/kyc-details/kyc-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/kyc-details/kyc-details.component.html
@@ -6,7 +6,7 @@
                     <label class="  font-weight-500 text-color">Identity</label>
                 </div>
                 <div class="col-7">
-                    <input type="text" class="form-control" formControlName="identityTypeId">
+                    <input type="text" class="form-control" formControlName="identityTypeName">
                 </div>
             </div>
         </div>
@@ -17,7 +17,7 @@
                     <label class=" font-weight-500 text-color">Unique Identity No.</label>
                 </div>
                 <div class="col-7">
-                    <input formControlName="identityProofNumber" type="text" aria-label="Pin Code"
+                    <input formControlName="idCardNumber" type="text" aria-label="Pin Code"
                         placeholder="Unique Identity Number" class="form-control" s>
                 </div>
             </div>
@@ -55,8 +55,9 @@
                                 Address</label>
                         </div>
                         <div class="col-7">
-                            <textarea formControlName="address" type="text" rows="5" aria-label="Residential Address"
-                                placeholder="Enter your text" class="form-control"></textarea>
+                            <textarea formControlName="permanentAddress" type="text" rows="5"
+                                aria-label="Residential Address" placeholder="Enter your text"
+                                class="form-control"></textarea>
                         </div>
                     </div>
                 </div>
@@ -68,7 +69,7 @@
                                 </label>
                             </div>
                             <div class="col-7">
-                                <input type="text" formControlName="stateId" class="form-control">
+                                <input type="text" formControlName="permanentAddStateName" class="form-control">
                             </div>
                         </div>
                     </div>
@@ -80,7 +81,7 @@
                                     </label>
                                 </div>
                                 <div class="col-7">
-                                    <input type="text" formControlName="cityId" class="form-control">
+                                    <input type="text" formControlName="permanentAddCityName" class="form-control">
                                 </div>
                             </div>
                         </div>
@@ -93,7 +94,7 @@
                                     <label class="  font-weight-500 text-color">Pin Code</label>
                                 </div>
                                 <div class="col-7">
-                                    <input formControlName="pinCode" type="text" aria-label="Pin Code"
+                                    <input formControlName="permanentAddPin" type="text" aria-label="Pin Code"
                                         placeholder="000000" class="form-control">
                                 </div>
                             </div>
@@ -107,7 +108,7 @@
                                 </label>
                             </div>
                             <div class="col-7">
-                                <input type="text" formControlName="addressProofTypeId" class="form-control">
+                                <input type="text" formControlName="permanentAddProofTypeName" class="form-control">
 
                             </div>
                         </div>
@@ -120,7 +121,7 @@
                                     No.</label>
                             </div>
                             <div class="col-7">
-                                <input formControlName="addressProofNumber" type="text"
+                                <input formControlName="permanentAddCardNumber" type="text"
                                     placeholder="Unique Identity Number" class="form-control">
 
                             </div>
@@ -130,30 +131,29 @@
                     <div class=" kt-margin-t-20 kt-margin-b-20">
                         <div class="row">
                             <div class="col">
-                                <div class="offset-4 img-container">
+                                <div class="offset-4 img-container"
+                                    *ngIf="kycForm.controls.residentialAddProof.value.length == 0">
                                     <img class="placeholder-image"
                                         src="../../../../../../assets/media/icons/image-placeholder.png"
                                         alt="placeholder">
                                 </div>
 
-                                <!-- <div *ngIf="addressForm.controls.addressProof.value.length > 0">
+                                <div *ngIf="kycForm.controls.permanentAddProof.value.length > 0">
                                     <div class="row">
                                         <div class="col-6"
-                                            *ngFor="let img of addressForm.controls.addressProof.value, index as idx">
+                                            *ngFor="let img of kycForm.controls.permanentAddProof.value, index as idx">
                                             <div class="img-container">
                                                 <img class="fetched-image" [src]="img" alt="">
                                             </div>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-6">
-
-
                 <div class=" kt-margin-t-20">
                     <div class="row">
                         <div class="col-3 offset-1 p-0">
@@ -163,8 +163,9 @@
                                 Address</label>
                         </div>
                         <div class="col-7">
-                            <textarea formControlName="address" type="text" rows="5" aria-label="Residential Address"
-                                placeholder="Enter your text" class="form-control"></textarea>
+                            <textarea formControlName="residentialAddress" type="text" rows="5"
+                                aria-label="Residential Address" placeholder="Enter your text"
+                                class="form-control"></textarea>
                         </div>
                     </div>
                 </div>
@@ -176,7 +177,7 @@
                                 </label>
                             </div>
                             <div class="col-7">
-                                <input type="text" formControlName="stateId" class="form-control">
+                                <input type="text" formControlName="residentialAddStateName" class="form-control">
                             </div>
                         </div>
                     </div>
@@ -188,7 +189,7 @@
                                     </label>
                                 </div>
                                 <div class="col-7">
-                                    <input type="text" formControlName="cityId" class="form-control">
+                                    <input type="text" formControlName="residentialAddCityName" class="form-control">
                                 </div>
                             </div>
                         </div>
@@ -201,7 +202,7 @@
                                     <label class="  font-weight-500 text-color">Pin Code</label>
                                 </div>
                                 <div class="col-7">
-                                    <input formControlName="pinCode" type="text" aria-label="Pin Code"
+                                    <input formControlName="residentialAddPin" type="text" aria-label="Pin Code"
                                         placeholder="000000" class="form-control">
                                 </div>
                             </div>
@@ -215,7 +216,7 @@
                                 </label>
                             </div>
                             <div class="col-7">
-                                <input type="text" formControlName="addressProofTypeId" class="form-control">
+                                <input type="text" formControlName="residentialAddProofTypeName" class="form-control">
 
                             </div>
                         </div>
@@ -228,7 +229,7 @@
                                     No.</label>
                             </div>
                             <div class="col-7">
-                                <input formControlName="addressProofNumber" type="text"
+                                <input formControlName="residentialAddCardNumber" type="text"
                                     placeholder="Unique Identity Number" class="form-control">
 
                             </div>
@@ -238,22 +239,23 @@
                     <div class=" kt-margin-t-20 kt-margin-b-20">
                         <div class="row">
                             <div class="col">
-                                <div class="offset-4 img-container">
+                                <div class="offset-4 img-container"
+                                    *ngIf="kycForm.controls.residentialAddProof.value.length == 0">
                                     <img class="placeholder-image"
                                         src="../../../../../../assets/media/icons/image-placeholder.png"
                                         alt="placeholder">
                                 </div>
 
-                                <!-- <div *ngIf="addressForm.controls.addressProof.value.length > 0">
+                                <div *ngIf="kycForm.controls.residentialAddProof.value.length > 0">
                                     <div class="row">
                                         <div class="col-6"
-                                            *ngFor="let img of addressForm.controls.addressProof.value, index as idx">
+                                            *ngFor="let img of kycForm.controls.residentialAddProof.value, index as idx">
                                             <div class="img-container">
                                                 <img class="fetched-image" [src]="img" alt="">
                                             </div>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
                     </div>
